-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.3, Lustre 2.14.0
-
None
-
3
-
9223372036854775807
‘lfs mirror read’ has a -o/--outfile option that you can specify the output file that the contents of the mirror will be saved to. Yet, we get an error when we try to save a mirror to an output file.
# lfs getstripe /mnt/lustre/test-framework.sh
/mnt/lustre/test-framework.sh
lcm_layout_gen: 2
lcm_mirror_count: 2
lcm_entry_count: 2
lcme_id: 65537
lcme_mirror_id: 1
lcme_flags: init
lcme_extent.e_start: 0
lcme_extent.e_end: EOF
lmm_stripe_count: 1
lmm_stripe_size: 1048576
lmm_pattern: raid0
lmm_layout_gen: 0
lmm_stripe_offset: 1
lmm_objects:
- 0: { l_ost_idx: 1, l_fid: [0x100010000:0x3:0x0] }
lcme_id: 131073
lcme_mirror_id: 2
lcme_flags: init
lcme_extent.e_start: 0
lcme_extent.e_end: EOF
lmm_stripe_count: 2
lmm_stripe_size: 1048576
lmm_pattern: raid0
lmm_layout_gen: 0
lmm_stripe_offset: 1
lmm_objects:
- 0: { l_ost_idx: 1, l_fid: [0x100010000:0x4:0x0] }
- 1: { l_ost_idx: 0, l_fid: [0x100000000:0x3:0x0] }
[root@trevis-62vm1 tests]# lfs mirror read -N 2 -o /mnt/lustre/mirror-tf /mnt/lustre/test-framework.sh
lfs mirror: cannot stat file '/mnt/lustre/mirror-tf': No such file or directory